--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-resize-aware": "^3.1.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "use-timeout": "^1.1.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
