--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "cors-backdoor": "^1.0.6",
     "facepaint": "^1.2.1",
+    "nanoid": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-query": "^3.39.1",
     "react-resize-aware": "^3.1.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "recoil": "^0.7.0",
     "use-timeout": "^1.1.0",
     "web-vitals": "^2.1.3"
@@ -25,7 +29,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "cors-backdoor --target https://dev-know-dbase.pantheonsite.io | react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
