--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^2.1.3",
     "recoil": "^0.7.0",
+    "use-react-router-breadcrumbs": "^3.2.1",
     "use-timeout": "^1.1.0",
     "web-vitals": "^2.1.3"
   },
