--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-query": "^3.39.1",
     "react-resize-aware": "^3.1.1",
     "react-router-dom": "^6.2.1",
+    "react-safely-set-inner-html": "^1.1.0",
     "react-scripts": "^2.1.3",
     "recoil": "^0.7.0",
     "use-react-router-breadcrumbs": "^3.2.1",
