--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.2.1",
     "react-safely-set-inner-html": "^1.1.0",
     "react-scripts": "^2.1.3",
+    "react-slidedown": "^2.4.7",
     "react-transition-group": "^4.4.2",
     "recoil": "^0.7.0",
     "use-react-router-breadcrumbs": "^3.2.1",
